--- a/website/src/pages/docs/caching/field-behavior.mdx
+++ b/website/src/pages/docs/caching/field-behavior.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to customize cached fields in Apollo Client by defining field policies with read and merge functions. Optimize your cache with key arguments. Read more at the Apollo Client documentation.
+---
 # Customizing the Behavior of Cached Fields
 
 You can customize how a particular field in your Apollo Client cache is read and written. To do so,
