--- a/website/src/pages/docs/caching/interaction.mdx
+++ b/website/src/pages/docs/caching/interaction.mdx
@@ -1,3 +1,6 @@
+---
+description : Learn how to efficiently read and write data to the cache with Apollo Client. Check out the "Reading and writing data to the cache" chapter in the Apollo Client documentation.
+---
 # Reading and Writing Data to the Cache
 
 Apollo Client provides three methods for reading and writing data to the cache:
