--- a/website/src/pages/docs/data/error-handling.mdx
+++ b/website/src/pages/docs/data/error-handling.mdx
@@ -1,5 +1,5 @@
 ---
-description: Handling errors with Apollo
+description: Learn about handling different types of errors in your GraphQL application with Apollo Client, including GraphQL errors, server errors, transaction errors, UI errors, and Apollo Client errors. Explore error policies such as "none," "ignore," and "all," and how to set them on each request. Handle network errors with Apollo Link and the @apollo/client/link/error. Check out the "Error Handling" chapter on Apollo Client documentation for more details.
 ---
 
 # Error Handling
