--- a/website/src/pages/docs/data/fragments.mdx
+++ b/website/src/pages/docs/data/fragments.mdx
@@ -1,3 +1,6 @@
+---
+description:  Learn how to use GraphQL Fragments with Apollo client in this tutorial. GraphQL fragments let you share query logic between multiple queries, mutations, or subscriptions, allowing you to co-locate field access with the places they are used. You can also define fragments on unions and interfaces, and use patterns in Apollo client to take full advantage of it.
+---
 # Using Fragments
 
 A [GraphQL fragment](http://graphql.org/learn/queries/#fragments) is a shared piece of query logic.
