--- a/website/src/pages/docs/data/mutations.mdx
+++ b/website/src/pages/docs/data/mutations.mdx
@@ -1,5 +1,5 @@
 ---
-description: Update data with the Apollo.mutate
+description: Learn how to update data using the Apollo `mutate` in GraphQL mutations. Code examples in Angular and explanations on Optimistic UI.
 ---
 
 import { Callout } from '@theguild/components';
