--- a/website/src/pages/docs/data/network.mdx
+++ b/website/src/pages/docs/data/network.mdx
@@ -1,5 +1,5 @@
 ---
-description: How to interact with your GraphQL API
+description: Learn how to use Apollo Angular's HttpLink and HttpClient to create a network layer in Angular. Get free SSR and easier testing with HttpLink. Use the HttpClient to support the HttpLink.
 ---
 
 import { Callout } from '@theguild/components';
