--- a/website/src/pages/docs/data/services.mdx
+++ b/website/src/pages/docs/data/services.mdx
@@ -1,5 +1,5 @@
 ---
-description: Additional API to use GraphQL in Angular
+description: Apollo Angular introduces a new approach of working with GraphQL in Angular by providing Query, Mutation and Subscription APIs. This approach makes GraphQL Documents first-class citizens, and the new APIs are easy to use and generate.
 ---
 
 import { Callout } from '@theguild/components';
