--- a/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
+++ b/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
@@ -1,5 +1,5 @@
 ---
-description: How to build UI features before your GraphQL API supports them
+description: Learn how to use client schemas to add a new field to an existing type in your schema using mock data, with Apollo Client and GraphQL queries.
 ---
 
 # Mocking New Schema Capabilities
