--- a/website/src/pages/docs/development-and-testing/testing.mdx
+++ b/website/src/pages/docs/development-and-testing/testing.mdx
@@ -1,7 +1,5 @@
 ---
-description:
-  Have peace of mind when using apollo-angular in production and learn how to test GraphQL in
-  Angular
+description: Learn how to test apollo-angular code using Jest with ApolloTestingModule. It allows for easy mocking of calls to the GraphQL endpoint, so tests can run in isolation and produce consistent results.
 ---
 
 import { Callout } from '@theguild/components';
