--- a/website/src/pages/docs/local-state/management.mdx
+++ b/website/src/pages/docs/local-state/management.mdx
@@ -1,5 +1,5 @@
 ---
-description: Interacting with local data in Apollo Client
+description: Learn how to manage local state alongside remotely fetched state with Apollo Client, using field policies and reactive variables.
 ---
 
 # Managing Local State
