--- a/website/src/pages/docs/migration.mdx
+++ b/website/src/pages/docs/migration.mdx
@@ -1,5 +1,5 @@
 ---
-description: Updating your app to Angular Apollo v3
+description: Updating your app to Angular Apollo v3. See what's new and how to migrate.
 ---
 
 # Migration Guide
