--- a/website/src/pages/docs/performance/improving-performance.mdx
+++ b/website/src/pages/docs/performance/improving-performance.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to improve your application's performance with Apollo Client! Redirect queries to cached data and use prefetching to load data before it's needed. Read more in the Apollo Client documentation.
+---
+
 # Improving Performance
 
 ## Redirecting to Cached Data
