--- a/website/src/pages/docs/performance/server-side-rendering.mdx
+++ b/website/src/pages/docs/performance/server-side-rendering.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo for faster web page rendering! Apollo provides techniques to load your application quickly, including store rehydration and server-side rendering. This tutorial provides code examples and best practices.
+---
 import { Callout } from '@theguild/components';
 
 # Server Side Rendering
