--- a/website/src/pages/docs/recipes/angular-cli.mdx
+++ b/website/src/pages/docs/recipes/angular-cli.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to integrate Apollo with Angular using ng add apollo-angular. Use Angular CLI Proxy to define configurations for your GraphQL endpoint
+---
 # Angular CLI
 
 To get started with Apollo and Angular run:
