--- a/website/src/pages/docs/recipes/authentication.mdx
+++ b/website/src/pages/docs/recipes/authentication.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to secure your Apollo Client using authentication headers or cookies. See examples of authenticating with JWT tokens and resetting the store on login/logout.
+---
 import { Callout } from '@theguild/components';
 
 # Authentication
