--- a/website/src/pages/docs/recipes/automatic-persisted-queries.mdx
+++ b/website/src/pages/docs/recipes/automatic-persisted-queries.mdx
@@ -1,3 +1,6 @@
+---
+description: Improve GraphQL performance with Automatic Persisted Queries - sends a generated ID instead of query text, reducing overhead for client performance. Learn how to install and use in Angular.
+---
 import { PackageCmd } from '@theguild/components';
 
 # Automatic Persisted Queries
