--- a/website/src/pages/docs/recipes/webpack.mdx
+++ b/website/src/pages/docs/recipes/webpack.mdx
@@ -1,3 +1,6 @@
+---
+description: How to use the Webpack Loader. Learn how to load GraphQL queries over `.graphql` files using Webpack.
+---
 import { PackageCmd } from '@theguild/components';
 
 # Webpack Loader
