--- a/website/src/pages/v1/basics/caching.mdx
+++ b/website/src/pages/v1/basics/caching.mdx
@@ -1,5 +1,5 @@
 ---
-description: A guide to customizing and directly accessing your Apollo cache
+description: A guide to customizing and directly accessing your Apollo cache. Learn how to read and write data to your cache, and how to configure your cache to work with your data.
 ---
 
 import { Callout, PackageCmd } from '@theguild/components';
