--- a/website/src/pages/v1/basics/network-layer.mdx
+++ b/website/src/pages/v1/basics/network-layer.mdx
@@ -1,5 +1,5 @@
 ---
-description: How to configure Apollo Client's network layer.
+description: How to configure Apollo Client's network layer. Learn how to use Apollo Link to create a custom network layer.
 ---
 
 # Network layer (Apollo Link)
