--- a/website/src/pages/v1/basics/queries.mdx
+++ b/website/src/pages/v1/basics/queries.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo Client with Angular to build a GraphQL-powered app. This guide covers everything from setting up Apollo Client to querying GraphQL data.
+---
 import { Callout } from '@theguild/components';
 
 # Queries
