--- a/website/src/pages/v1/basics/setup.mdx
+++ b/website/src/pages/v1/basics/setup.mdx
@@ -1,3 +1,6 @@
+---
+description: Apollo Angular is a community-maintained Angular integration for Apollo Client. It provides you with everything you need to use Apollo Client in your Angular app.
+---
 import { Callout, PackageCmd } from '@theguild/components';
 
 # Setup and Options
