--- a/website/src/pages/v1/features/error-handling.mdx
+++ b/website/src/pages/v1/features/error-handling.mdx
@@ -1,5 +1,5 @@
 ---
-description: Handling errors with Apollo
+description: Handling errors with Apollo. Learn how to handle GraphQL errors, network errors, and UI errors.
 ---
 
 # Error Handling
