--- a/website/src/pages/v1/features/fragments.mdx
+++ b/website/src/pages/v1/features/fragments.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use fragments to share query logic between components.
+---
 # Using Fragments
 
 A [GraphQL fragment](http://graphql.org/learn/queries/#fragments) is a shared piece of query logic.
