--- a/website/src/pages/v1/features/multiple-clients.mdx
+++ b/website/src/pages/v1/features/multiple-clients.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use multiple clients in your Angular application. You will learn how to create them and how to use them.
+---
 import { Callout } from '@theguild/components';
 
 # Multiple Clients
