--- a/website/src/pages/v1/features/nativescript.mdx
+++ b/website/src/pages/v1/features/nativescript.mdx
@@ -1,3 +1,6 @@
+---
+description: Integrate Apollo with NativeScript. Learn how to use Apollo with NativeScript.
+---
 import { Callout, PackageCmd } from '@theguild/components';
 
 # Integrating with NativeScript
