--- a/website/src/pages/v1/features/subscriptions.mdx
+++ b/website/src/pages/v1/features/subscriptions.mdx
@@ -1,3 +1,6 @@
+---
+description: GraphQL subscriptions are a way to push data from the server to the clients that choose to listen to real time messages from the server.
+---
 import { Callout } from '@theguild/components';
 
 # Subscriptions
