--- a/website/src/pages/v1/guides/state-management.mdx
+++ b/website/src/pages/v1/guides/state-management.mdx
@@ -1,5 +1,5 @@
 ---
-description: Managing your local and remote state in a GraphQL world
+description: Managing your local and remote state in a GraphQL world. Learn how to use Apollo Client to manage all of your application's data.
 ---
 
 # State Management
