--- a/website/src/pages/v1/guides/testing.mdx
+++ b/website/src/pages/v1/guides/testing.mdx
@@ -1,5 +1,5 @@
 ---
-description: Have peace of mind when using apollo-angular in production
+description: Have peace of mind when using apollo-angular in production. Learn how to test your code.
 ---
 
 # Testing Apollo in Angular
