--- a/website/src/pages/v1/index.mdx
+++ b/website/src/pages/v1/index.mdx
@@ -1,5 +1,5 @@
 ---
-description: What is Apollo Client and what does it do?
+description: What is Apollo Client and what does it do?. Learn how to get started with Apollo Client.
 ---
 
 # Introduction
