--- a/website/src/pages/v1/recipes/angular-cli.mdx
+++ b/website/src/pages/v1/recipes/angular-cli.mdx
@@ -1,3 +1,6 @@
+---
+description:  Angular CLI. Setup and proxy configuration. Learn how to use Apollo with Angular CLI.
+---
 # Angular CLI
 
 ## Setup
