--- a/website/src/pages/v1/recipes/authentication.mdx
+++ b/website/src/pages/v1/recipes/authentication.mdx
@@ -1,3 +1,6 @@
+---
+description: This guide will walk you through the process of setting up Apollo Client in an Angular application.
+---
 import { Callout } from '@theguild/components';
 
 # Authentication
