--- a/website/src/pages/v1/recipes/query-splitting.mdx
+++ b/website/src/pages/v1/recipes/query-splitting.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo Client with Angular to build a GraphQL-powered app. This guide covers everything from setting up Apollo Client to querying data with GraphQL.
+---
 # Query Splitting
 
 Prefetching is an easy way to make your applications UI feel faster. You can use mouse events to
