--- a/website/src/pages/v1/recipes/webpack.mdx
+++ b/website/src/pages/v1/recipes/webpack.mdx
@@ -1,3 +1,6 @@
+---
+description: Webpack loader for GraphQL files. It parses GraphQL files and returns the AST. It also includes the GraphQL AST in the bundle.
+---
 # Webpack Loader
 
 You can load GraphQL queries over `.graphql` files using Webpack. The package `graphql-tag` comes
