--- a/website/src/pages/v2/caching/field-behavior.mdx
+++ b/website/src/pages/v2/caching/field-behavior.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo Client to manage local state. You can use Apollo Client to store local data in the cache, and to read and write local data to the cache.
+---
 # Customizing the Behavior of Cached Fields
 
 You can customize how a particular field in your Apollo Client cache is read and written. To do so,
