--- a/website/src/pages/v2/caching/garbage-collection.mdx
+++ b/website/src/pages/v2/caching/garbage-collection.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo Client 3 to manage local state and cache data.
+---
 import { Callout } from '@theguild/components';
 
 # Garbage Collection and Cache Eviction
