--- a/website/src/pages/v2/data/mutations.mdx
+++ b/website/src/pages/v2/data/mutations.mdx
@@ -1,5 +1,5 @@
 ---
-description: Update data with the Apollo.mutate
+description: Update data with the Apollo.mutate. Learn how to use mutations in Apollo Angular.
 ---
 
 import { Callout } from '@theguild/components';
