--- a/website/src/pages/v2/data/network.mdx
+++ b/website/src/pages/v2/data/network.mdx
@@ -1,5 +1,5 @@
 ---
-description: How to interact with your GraphQL API
+description: How to interact with your GraphQL API. Learn how to use Apollo Client to query, mutate, and subscribe to data.
 ---
 
 import { Callout } from '@theguild/components';
