--- a/website/src/pages/v2/data/pagination.mdx
+++ b/website/src/pages/v2/data/pagination.mdx
@@ -1,3 +1,6 @@
+---
+description: How to use Apollo Client to implement pagination in your app. Learn about offset-based and cursor-based pagination, and how to use the `fetchMore` method to implement both.
+---
 # Pagination
 
 Sometimes, you will have one or more views in your application where you need to display a list that
