--- a/website/src/pages/v2/data/queries.mdx
+++ b/website/src/pages/v2/data/queries.mdx
@@ -1,5 +1,5 @@
 ---
-description: Fetch data with the Apollo service
+description: Fetch data with the Apollo service. Learn how to use Apollo to attach GraphQL query results to your Angular UI.
 ---
 
 import { Callout } from '@theguild/components';
