--- a/website/src/pages/v2/data/services.mdx
+++ b/website/src/pages/v2/data/services.mdx
@@ -1,5 +1,5 @@
 ---
-description: Additional API to use GraphQL in Angular
+description: Additional API to use GraphQL in Angular. Code generation, Apollo DevTools, and more.
 ---
 
 import { Callout } from '@theguild/components';
