--- a/website/src/pages/v2/data/subscriptions.mdx
+++ b/website/src/pages/v2/data/subscriptions.mdx
@@ -1,5 +1,5 @@
 ---
-description: Get real-time updates from your GraphQL server
+description: Get real-time updates from your GraphQL server. Learn how to use GraphQL subscriptions with Apollo Client.
 ---
 
 import { Callout } from '@theguild/components';
