--- a/website/src/pages/v2/development-and-testing/client-schema-mocking.mdx
+++ b/website/src/pages/v2/development-and-testing/client-schema-mocking.mdx
@@ -1,5 +1,5 @@
 ---
-description: How to build UI features before your GraphQL API supports them
+description: How to build UI features before your GraphQL API supports them. Mocking client-only fields with Apollo Client.
 ---
 
 # Mocking New Schema Capabilities
