--- a/website/src/pages/v2/development-and-testing/using-typescript.mdx
+++ b/website/src/pages/v2/development-and-testing/using-typescript.mdx
@@ -1,5 +1,5 @@
 ---
-description: Using TypeScript with GraphQL and Angular and making everything type safe
+description: Using TypeScript with GraphQL and Angular and making everything type safe.
 ---
 
 # TypeScript
