--- a/website/src/pages/v2/local-state/management.mdx
+++ b/website/src/pages/v2/local-state/management.mdx
@@ -1,5 +1,5 @@
 ---
-description: Interacting with local data in Apollo Client
+description: Interacting with local data in Apollo Client. Learn how to manage local state with reactive variables and field policies.
 ---
 
 # Managing Local State
