--- a/website/src/pages/v2/local-state/reactive-variables.mdx
+++ b/website/src/pages/v2/local-state/reactive-variables.mdx
@@ -1,5 +1,5 @@
 ---
-description: State containers integrated into Apollo Client's reactivity model
+description: State containers integrated into Apollo Client's reactivity model.
 ---
 
 # Reactive Variables
