--- a/website/src/pages/v2/performance/server-side-rendering.mdx
+++ b/website/src/pages/v2/performance/server-side-rendering.mdx
@@ -1,3 +1,6 @@
+---
+description: Server Side Rendering and Store Rehydration. Learn how to use Apollo with Angular. 
+---
 import { Callout } from '@theguild/components';
 
 # Server Side Rendering
