--- a/website/src/pages/v2/recipes/angular-cli.mdx
+++ b/website/src/pages/v2/recipes/angular-cli.mdx
@@ -1,3 +1,6 @@
+---
+description: Angular integration for Apollo Client. Apollo Client is a fully-featured, production ready caching GraphQL client for every UI framework and GraphQL server.
+---
 # Angular CLI
 
 To get started with Apollo and Angular run:
