--- a/website/src/pages/v2/recipes/authentication.mdx
+++ b/website/src/pages/v2/recipes/authentication.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo Client with Angular to build a full-stack app. This tutorial covers the basics of using Apollo Client with Angular.
+---
 # Authentication
 
 Unless all the data you are loading is completely public, your app has some sort of users, accounts
