--- a/website/src/pages/v2/recipes/automatic-persisted-queries.mdx
+++ b/website/src/pages/v2/recipes/automatic-persisted-queries.mdx
@@ -1,3 +1,6 @@
+---
+description: Automatic Persisted Queries for Apollo Angular. Improve GraphQL performance with Automatic Persisted Queries.
+---
 import { PackageCmd } from '@theguild/components';
 
 # Automatic Persisted Queries
