--- a/website/src/pages/v2/recipes/multiple-clients.mdx
+++ b/website/src/pages/v2/recipes/multiple-clients.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use multiple clients in your Angular application
+---
 import { Callout } from '@theguild/components';
 
 # Multiple Clients
