--- a/website/src/pages/v2/recipes/webpack.mdx
+++ b/website/src/pages/v2/recipes/webpack.mdx
@@ -1,3 +1,6 @@
+---
+description: Webpack loader for GraphQL files. Load GraphQL queries over .graphql files using Webpack.
+---
 import { PackageCmd } from '@theguild/components';
 
 # Webpack Loader
