--- a/website/src/pages/docs/data/pagination.mdx
+++ b/website/src/pages/docs/data/pagination.mdx
@@ -1,3 +1,6 @@
+---
+description:Learn how to implement pagination with Apollo client in both numbered pages and cursor-based approaches. Easy to use helper functions provided!
+---
 # Pagination
 
 Sometimes, you will have one or more views in your application where you need to display a list that
