--- a/website/src/pages/docs/data/queries.mdx
+++ b/website/src/pages/docs/data/queries.mdx
@@ -1,5 +1,5 @@
 ---
-description: Fetch data with the Apollo service
+description: Learn how to use Apollo to attach GraphQL query results to your Angular UI with standard GraphQL queries. Cache the results and use QueryRef to manage the watched query. Optimize queries by using options, such as variables, and display data with AsyncPipe.
 ---
 
 import { Callout } from '@theguild/components';
