--- a/website/src/pages/docs/development-and-testing/developer-tools.mdx
+++ b/website/src/pages/docs/development-and-testing/developer-tools.mdx
@@ -1,5 +1,5 @@
 ---
-description: A list of tools to improve your developer experience when working with GraphQL
+description: Discover essential developer tools for Apollo Angular including GraphQL Inspector, GraphQL Codegen, and more. Improve and maintain your GraphQL API with these powerful tools.
 ---
 
 import { PackageCmd } from '@theguild/components';
