--- a/website/src/pages/docs/performance/optimistic-ui.mdx
+++ b/website/src/pages/docs/performance/optimistic-ui.mdx
@@ -1,3 +1,7 @@
+---
+description: Optimistic UI speeds up UI response time by simulating mutations and updating the UI before receiving a response from the server. This code shows how to use optimistic UI with GraphQL and Apollo, including updating an existing object and adding to a list.
+---
+
 # Optimistic UI
 
 As explained in the [mutations](../data/mutations#optimistic-ui) section, optimistic UI is a pattern
