--- a/website/src/pages/docs/recipes/nativescript.mdx
+++ b/website/src/pages/docs/recipes/nativescript.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo with NativeScript. You can use Apollo with NativeScript exactly as you would with normal Angular application.
+---
 import { Callout, PackageCmd } from '@theguild/components';
 
 # Integrating with NativeScript
