--- a/website/src/pages/v1/features/cache-updates.mdx
+++ b/website/src/pages/v1/features/cache-updates.mdx
@@ -1,3 +1,6 @@
+---
+description: Apollo Client is a fully-featured, production ready caching GraphQL client for every UI framework and GraphQL server.
+---
 import { Callout } from '@theguild/components';
 
 # Updating the Store
