--- a/website/src/pages/v1/features/caching.mdx
+++ b/website/src/pages/v1/features/caching.mdx
@@ -1,5 +1,5 @@
 ---
-description: Read and write functions for fine-grained cache access.
+description: Read and write functions for fine-grained cache access. Learn how to use the Apollo Client cache to update your UI.
 ---
 
 # Direct Cache Access
