--- a/website/src/pages/v1/recipes/server-side-rendering.mdx
+++ b/website/src/pages/v1/recipes/server-side-rendering.mdx
@@ -1,3 +1,6 @@
+---
+description: Learn how to use Apollo with Angular to build a GraphQL-powered app. This tutorial covers everything from setting up Apollo Client to querying data with GraphQL.
+---
 import { Callout } from '@theguild/components';
 
 # Server Side Rendering
