--- a/website/src/pages/v1/recipes/simple-example.mdx
+++ b/website/src/pages/v1/recipes/simple-example.mdx
@@ -1,5 +1,5 @@
 ---
-description: A tiny app
+description: This a very simple example of an Apollo Application that uses Angular. You can see GraphQL in action, combined with the concepts explained in this guide.
 ---
 
 # Small Example
