--- a/website/src/pages/v2/caching/configuration.mdx
+++ b/website/src/pages/v2/caching/configuration.mdx
@@ -1,3 +1,6 @@
+---
+description: The Apollo Client cache is a normalized, in-memory data store that enables your client to respond to future queries for the same data without sending unnecessary network requests.
+---
 import { Callout } from '@theguild/components';
 
 # Configuring the Cache
