--- a/website/src/pages/v2/development-and-testing/developer-tools.mdx
+++ b/website/src/pages/v2/development-and-testing/developer-tools.mdx
@@ -1,5 +1,5 @@
 ---
-description: A list of tools to improve your developer experience when working with GraphQL
+description: A list of tools to improve your developer experience when working with GraphQL. 
 ---
 
 # Developer Tools
