--- a/website/src/pages/v2/performance/optimistic-ui.mdx
+++ b/website/src/pages/v2/performance/optimistic-ui.mdx
@@ -1,3 +1,6 @@
+---
+description: Optimistic UI is a pattern that you can use to simulate the results of a mutation and update the UI even before receiving a response from the server.
+---
 # Optimistic UI
 
 As explained in the [mutations](../data/mutations#optimistic-ui) section, optimistic UI is a pattern
