--- a/website/src/pages/v1/recipes/boost-migration.mdx
+++ b/website/src/pages/v1/recipes/boost-migration.mdx
@@ -48,8 +48,8 @@ export class AppModule {
 To create a basic client with the same defaults as Apollo Angular Boost, first you need to install
 some packages:
 
-```bash
-npm install --save \
+```sh npm2yarn
+npm i \
   apollo-angular \
   apollo-angular-link-http \
   apollo-client \
