--- a/website/src/pages/docs/recipes/nativescript.mdx
+++ b/website/src/pages/docs/recipes/nativescript.mdx
@@ -1,7 +1,7 @@
 ---
 description: Learn how to use Apollo with NativeScript. You can use Apollo with NativeScript exactly as you would with normal Angular application.
 ---
-import { Callout, PackageCmd } from '@theguild/components';
+import { Callout } from '@theguild/components';
 
 # Integrating with NativeScript
 
@@ -10,7 +10,9 @@ You can use Apollo with NativeScript exactly as you would with normal Angular ap
 To introduce Apollo to your app, install `apollo-angular` from npm and use them in your app as
 outlined in the [setup](../get-started) article:
 
-<PackageCmd packages={['apollo-angular']} />
+```sh npm2yarn
+npm i apollo-angular
+```
 
 <Callout>
   **Note**: There are more packages to be installed, so check out the "initialization" article.
