--- a/website/src/pages/v1/features/subscriptions.mdx
+++ b/website/src/pages/v1/features/subscriptions.mdx
@@ -87,8 +87,8 @@ Let's look at how to add support for this transport to Apollo Client.
 
 First, install the WebSocket Apollo Link (`apollo-link-ws`) from npm:
 
-```shell
-npm install apollo-link-ws
+```sh npm2yarn
+npm i apollo-link-ws
 ```
 
 Then, initialize a GraphQL subscriptions transport link:
