--- a/website/src/pages/v1/guides/tools-and-packages.mdx
+++ b/website/src/pages/v1/guides/tools-and-packages.mdx
@@ -18,8 +18,8 @@ testing.
 
 [Read documentation](https://www.npmjs.com/package/apollo-angular-link-http)
 
-```bash
-yarn add apollo-angular-link-http
+```sh npm2yarn
+npm i apollo-angular-link-http
 ```
 
 ## Http Batching Link
@@ -28,8 +28,8 @@ An Apollo Link to combine multiple GraphQL operations into single HTTP request.
 
 [Read documentation](https://www.npmjs.com/package/apollo-angular-link-http-batch)
 
-```bash
-yarn add apollo-angular-link-http-batch
+```sh npm2yarn
+npm i apollo-angular-link-http-batch
 ```
 
 ## Persisted Queries
@@ -40,8 +40,8 @@ with `apollo-angular-link-http`.
 
 [Read documentation](https://www.npmjs.com/package/apollo-angular-link-persisted)
 
-```bash
-yarn add apollo-angular-link-persisted
+```sh npm2yarn
+npm i apollo-angular-link-persisted
 ```
 
 ## Code Generation
@@ -59,8 +59,8 @@ documentation.
 
 [Read documentation](https://graphql-code-generator.com/docs/plugins/typescript-apollo-angular)
 
-```bash
-yarn add @graphql-codegen/cli @graphql-codegen/typescript-apollo-angular
+```sh npm2yarn
+npm i @graphql-codegen/cli @graphql-codegen/typescript-apollo-angular
 ```
 
 ## Other Packages
