--- a/website/src/pages/v2/development-and-testing/developer-tools.mdx
+++ b/website/src/pages/v2/development-and-testing/developer-tools.mdx
@@ -1,5 +1,5 @@
 ---
-description: A list of tools to improve your developer experience when working with GraphQL. 
+description: A list of tools to improve your developer experience when working with GraphQL.
 ---
 
 # Developer Tools
@@ -45,13 +45,13 @@ documentation.
 
 [Read documentation](https://graphql-code-generator.com/docs/plugins/typescript-apollo-angular)
 
-```bash
-yarn add @graphql-codegen/cli @graphql-codegen/typescript-apollo-angular
+```sh npm2yarn
+npm i @graphql-codegen/cli @graphql-codegen/typescript-apollo-angular
 ```
 
 ## GraphQL ESLint
 
-[GraphQL ESLint](https://github.com/dotansimha/graphql-eslint/) is a parser, plugin and set rules
+[GraphQL ESLint](https://github.com/B2o5T/graphql-eslint) is a parser, plugin and set rules
 for GraphQL (for schema and operations). Easily customizable with custom rules. Integrates with IDEs
 and modern GraphQL tools.
 
